[workspace]
members = [
 "packages/*", 
 "contracts/collections/*",
 "contracts/minters/*",
 "contracts/factories/*",
 "scripts"
 ]

[workspace.package]
version       = "0.3.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/bitsongofficial/bs-nfts"
homepage      = "https://bitsong.io"
documentation = "https://docs.bitsong.io"

[workspace.dependencies]
anyhow                       = { version = "1.0" }
bs721                        = { version = "0.3.0", path = "./packages/bs721" }
bs721-base                   = { version = "0.3.0", path = "./contracts/collections/bs721-base" }
bs721-curve                  = { version = "0.3.0", path = "./contracts/collections/bs721-curve" }
bs721-royalties              = { version = "0.3.0", path = "./contracts/collections/bs721-royalties" }
bs721-factory                = { version = "0.3.0", path = "./contracts/factories/bs721-factory" }
bs-controllers               = { version = "0.3.0", path = "./packages/controllers" }
btsg-cw-orch                 = { version = "0.3.0", path = "./packages/cw-orch" }
cosmos-sdk-proto             = { version = "0.26.1", default-features = false }
cosmwasm-schema              = "2.2.0"
cosmwasm-std                 = "2.2.0"
cw-controllers               = "2.0.0"
cw2                          = "2.0.0"
cw20                         = "2.0.0"
cw-multi-test                = "2.2.0"
cw-orch                      = "0.26.0"
cw-ownable                   = "2.1.0"
cw-storage-macro             = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.21"
semver                       = "1.0"
serde                        = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror                    = "1.0.31"
url                          = "2.2.2"

[profile.release.package.bs721-base]
codegen-units = 1
incremental = false

[profile.release.package.bs721-curve]
codegen-units = 1
incremental = false

[profile.release.package.bs721-factory]
codegen-units = 1
incremental = false

[profile.release.package.bs721-launchparty]
codegen-units = 1
incremental = false

[profile.release.package.bs721-royalties]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
