[package]
name          = "cw721-track"
description   = "TODO: add description"
authors       = ["Angelo Recca <hello@bitsong.io>"]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
bs721-royalties         = { workspace = true, features = ["library"] }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }