[package]
name          = "bs721-base"
description   = "Basic implementation bs721 NFTs based on the original cw721-base"
authors       = [
  "Angelo Recca <angelorc@users.noreply.github.com>",
  "A Hardnett <hard-nett@users.noreply.github.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw721-base      = { workspace = true }
cw2             = { workspace = true }
cw721             = { workspace = true }
cw-ownable      = { workspace = true }
bs721           = { workspace = true }
bs-std          = { workspace = true }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
url       = { workspace = true }
