[package]
name = "bs721-metadata-onchain"
version       = { workspace = true }
authors       = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
  "Angelo Recca <angelorc@users.noreply.github.com>",
]
edition = { workspace = true }
description = "Example extending BS721 NFT to store metadata on chain"
license = "Apache-2.0"
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
bs721 = { workspace = true }
bs721-base = { workspace = true, features = ["library"] }
cw2             = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }