[package]
name          = "drop-simple"
description   = "A simple drop contract for Bs721 NFTs."
authors       = [
  "Angelo Recca <angelorc@users.noreply.github.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
bs721-base      = { workspace = true, features = ["library"] }
bs721-royalties   = { workspace = true }
cw-storage-plus = { workspace = true }
cw4             = "0.16.0"
cw4-group       = "0.16.0"
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
prost = "0.10"
