[package]
name          = "launchparty-fixed"
description   = "A basic launchpad contract for Bs721 NFTs."
authors       = [
  "Angelo Recca <angelorc@users.noreply.github.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
bs721-base      = { workspace = true, features = ["library"] }
bs721-royalties = { workspace = true, features = ["library"] }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
prost = "0.11.9"
cw-multi-test = "0.16.4"
derivative = "2.2"
anyhow = "1"