[package]
name          = "bs721-account"
description   = "Basic implementation bs721 NFTs based on the original cw721-base"
authors       = [
  "Angelo Recca <angelorc@users.noreply.github.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = { workspace = true }
cw-orch         = { workspace = true }

cw-controllers  = { workspace = true }
cw2             = { workspace = true }
cw-ownable      = { workspace = true }
btsg-account    = { workspace = true }
bs721           = { workspace = true }
bs721-base      = { workspace = true, features = ["library"]}
cw721           = { workspace = true }
cw-storage-plus = { workspace = true }
schemars        = { workspace = true }
semver          = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
url             = { workspace = true }
cw721-base = { workspace = true, features = ["library"]}
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
[dev-dependencies]
btsg-cw-orch         = { workspace = true }
