[package]
name          = "bs721-factory"
description   = "A factory contract for creating and managing BS721 contracts."
authors       = [
  "Angelo Recca <angelorc@users.noreply.github.com>",
]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-utils           = { workspace = true }
cw2                = { workspace = true }
bs721              = { workspace = true }
bs721-base         = { workspace = true, features = ["library"] }
bs721-curve        = { version = "0.3.0", path = "../../collections/bs721-curve", features = ["library"] }
bs721-launchparty  = { version = "0.3.0", path = "../../minters/bs721-launchparty", features = ["library"] }
bs721-royalties    = { workspace = true, features = ["library"] }
cw-storage-plus    = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
cosmos-sdk-proto   = { workspace = true, default-features = false }

[dev-dependencies]
prost = "0.11.9"
cw-multi-test  = { workspace = true }
derivative = "2.2"
anyhow = "1"