[package]
name       = "account-minter"
authors    = ["Shane Vitarana <s@noreply.publicawesome.com>,"]
version    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cw-storage-macro = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
account-marketplace = { path = "../../markets/account-market", features = ["library"] }
schemars = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
bs-account = { workspace = true }
bs-std = { workspace = true }
bs721 = { workspace = true }
bs721-base = { workspace = true, features = ["library"] }
bs721-accounts = { path = "../../collections/bs721-accounts", features = ["library"] }

thiserror = { workspace = true }


[dev-dependencies]
cw-multi-test    = { workspace = true }
bs721-base       = { workspace = true }
anyhow           = "1"